examples/src/fail_tests/move_ref_not_borrowed.stderr
error[E0597]: `s` does not live long enough
  --> src/fail_tests/move_ref_not_borrowed.rs:24:5
   |
16 |       let mut s = CopyRefBuilder {
   |           ----- binding `s` declared here
...
24 |       s.with_mut(|f| {
   |       ^ borrowed value does not live long enough
   |  _____|
   | |
25 | |         *f.ref1 = Some(f.other);
26 | |     });
   | |______- argument requires that `s` is borrowed for `'static`
...
29 |   }
   |   - `s` dropped here while still borrowed

error[E0505]: cannot move out of `s` because it is borrowed
  --> src/fail_tests/move_ref_not_borrowed.rs:28:10
   |
16 |       let mut s = CopyRefBuilder {
   |           ----- binding `s` declared here
...
24 |       s.with_mut(|f| {
   |       - borrow of `s` occurs here
   |  _____|
   | |
25 | |         *f.ref1 = Some(f.other);
26 | |     });
   | |______- argument requires that `s` is borrowed for `'static`
27 |
28 |       drop(s);
   |            ^ move out of `s` occurs here
